# flexicubes_cpp

./: .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md
extra/common/: obj_loader.hpp  perf_timer.hpp
extra/samples/: CMakeLists.txt  basic_extraction.cpp  mesh_to_sdf_test.cpp  optimization_loop.cpp  sphere_sdf.cpp
extra/tests/: CMakeLists.txt  test_case_id.cpp  test_differentiation.cpp  test_extraction.cpp  test_grid.cpp  test_interpolation.cpp  test_main.cpp  test_optimization_pipeline.cpp  test_surface.cpp  test_tables.cpp
include/flexicubes/: case_id.hpp  differentiable.hpp  differentiable_detail.hpp  dual_vertex.hpp  flexicubes.hpp  grid.hpp  qef_solver.hpp  regularizer.hpp  surface.hpp  tables.hpp  tables_data.inl  tetrahedralize.hpp  triangulate.hpp  types.hpp
scripts/: generate_tables.py
